changed the paths of `mrabbrev.bib' to the main `doc' directory where now a version is kept under CVS

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -43,7 +43,7 @@
 %
 \TableOfContents
 \FrontMatter
-\immediate\write\citeout{\bs bibdata{./manual,../../../doc/ref/mrabbrev,../../../doc/manual}}
+\immediate\write\citeout{\bs bibdata{./manual,../../../doc/mrabbrev,../../../doc/manual}}
 \Chapters
 \Input{ace}
 \Appendices
